--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
         <nav>
             <a href="">WebStudio</a>
-            <li>
-            <ul><a href="">Студия</a></ul>
-            <ul><a href="">Портфолио</a></ul>
-            <ul><a href="">Контакты</a></ul>
-            </li>
+            <ul>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+            </ul>
         </nav>
         <li>
              <ul><a href="mailto:info@devstudio.com">info@devstudio.com</a></ul>
@@ -55,10 +55,10 @@
     <footer>
         <a href="">WebStudio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <li>
-            <ul><a href="mailto:info@devstudio.com">info@devstudio.com</a></ul>
-            <ul><a href="tel:+380961111111">+38 096 111 11 11</a></ul>
-        </li>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </footer>
 </body>
 </html>
