--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <li>
-             <ul><a href="mailto:info@devstudio.com">info@devstudio.com</a></ul>
-             <ul><a href="tel:+380961111111">+38 096 111 11 11</a></ul>
-        </li>
+        <ul>
+             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
         <section>
@@ -37,9 +37,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./img/box 1.jpg" alt="work box1" width="370" height="294"></li>
-                <li><img src="./img/box 2.jpg" alt="work box2" width="370" height="294"></li>
-                <li><img src="./img/box 3.jpg" alt="work box3" width="370" height="294"></li>
+                <li><img src="./img/box1.jpg" alt="work box1" width="370" height="294"></li>
+                <li><img src="./img/box2.jpg" alt="work box2" width="370" height="294"></li>
+                <li><img src="./img/box3.jpg" alt="work box3" width="370" height="294"></li>
             </ul>
         </section>
         <section>
